crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__preview__B006_B006_6.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B006 [*] Do not use mutable data structures for argument defaults
 --> B006_6.py:4:22
  |
2 | # Same as B006_2.py, but import instead of docstring
3 |
4 | def foobar(foor, bar={}):    
  |                      ^^
5 |     import os                    
  |
help: Replace with `None`; initialize within function
  |
4 ~ def foobar(foor, bar=None):    
5 ~     import os                    
6 +     if bar is None:
7 +         bar = {}
  |
note: This is an unsafe fix and may change runtime behavior
