crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__preview__B006_B006_9.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B006 [*] Do not use mutable data structures for argument defaults
 --> B006_9.py:1:10
  |
1 | def f1(x=([],)):
  |          ^^^^^
2 |     print(x)
  |
help: Replace with `None`; initialize within function
  |
1 ~ def f1(x=None):
2 +     if x is None:
3 +         x = ([],)
  |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
 --> B006_9.py:5:10
  |
5 | def f2(x=(x for x in "x")):
  |          ^^^^^^^^^^^^^^^^
6 |     print(x)
  |
help: Replace with `None`; initialize within function
  |
5 ~ def f2(x=None):
6 +     if x is None:
7 +         x = (x for x in "x")
  |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_9.py:9:10
   |
 9 | def f3(x=((x for x in "x"),)):
   |          ^^^^^^^^^^^^^^^^^^^
10 |     print(x)
   |
help: Replace with `None`; initialize within function
   |
 9 ~ def f3(x=None):
10 +     if x is None:
11 +         x = ((x for x in "x"),)
   |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_9.py:13:11
   |
13 | def f4(x=(z := [1, ])):
   |           ^^^^^^^^^^
14 |     print(x)
   |
help: Replace with `None`; initialize within function
   |
13 ~ def f4(x=None):
14 +     if x is None:
15 +         x = (z := [1, ])
   |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_9.py:17:11
   |
17 | def f5(x=([1, ])):
   |           ^^^^^
18 |     print(x)
   |
help: Replace with `None`; initialize within function
   |
17 ~ def f5(x=None):
18 +     if x is None:
19 +         x = ([1, ])
   |
note: This is an unsafe fix and may change runtime behavior
