crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__preview__B006_B006_B008.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
assertion_line: 114
---
B006 [*] Do not use mutable data structures for argument defaults
  --> B006_B008.py:63:25
   |
63 | def this_is_wrong(value=[1, 2, 3]):
   |                         ^^^^^^^^^
64 |     ...
   |
help: Replace with `None`; initialize within function
   |
62 |
   - def this_is_wrong(value=[1, 2, 3]):
63 + def this_is_wrong(value=None):
64 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_B008.py:67:30
   |
67 | def this_is_also_wrong(value={}):
   |                              ^^
68 |     ...
   |
help: Replace with `None`; initialize within function
   |
66 |
   - def this_is_also_wrong(value={}):
67 + def this_is_also_wrong(value=None):
68 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_B008.py:73:52
   |
71 | class Foo:
72 |     @staticmethod
73 |     def this_is_also_wrong_and_more_indented(value={}):
   |                                                    ^^
74 |         pass
   |
help: Replace with `None`; initialize within function
   |
72 |     @staticmethod
   -     def this_is_also_wrong_and_more_indented(value={}):
73 +     def this_is_also_wrong_and_more_indented(value=None):
74 |         pass
   |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_B008.py:77:31
   |
77 |   def multiline_arg_wrong(value={
   |  _______________________________^
78 | |
79 | | }):
   | |_^
80 |       ...
   |
help: Replace with `None`; initialize within function
   |
76 |
   - def multiline_arg_wrong(value={
   -
   - }):
77 + def multiline_arg_wrong(value=None):
78 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

B006 Do not use mutable data structures for argument defaults
  --> B006_B008.py:82:36
   |
80 |     ...
81 |
82 | def single_line_func_wrong(value = {}): ...
   |                                    ^^
   |
help: Replace with `None`; initialize within function

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_B008.py:85:20
   |
85 | def and_this(value=set()):
   |                    ^^^^^
86 |     ...
   |
help: Replace with `None`; initialize within function
   |
84 |
   - def and_this(value=set()):
85 + def and_this(value=None):
86 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_B008.py:89:20
   |
89 | def this_too(value=collections.OrderedDict()):
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^
90 |     ...
   |
help: Replace with `None`; initialize within function
   |
88 |
   - def this_too(value=collections.OrderedDict()):
89 + def this_too(value=None):
90 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_B008.py:93:32
   |
93 | async def async_this_too(value=collections.defaultdict()):
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^
94 |     ...
   |
help: Replace with `None`; initialize within function
   |
92 |
   - async def async_this_too(value=collections.defaultdict()):
93 + async def async_this_too(value=None):
94 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
  --> B006_B008.py:97:26
   |
97 | def dont_forget_me(value=collections.deque()):
   |                          ^^^^^^^^^^^^^^^^^^^
98 |     ...
   |
help: Replace with `None`; initialize within function
   |
96 |
   - def dont_forget_me(value=collections.deque()):
97 + def dont_forget_me(value=None):
98 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:102:46
    |
101 | # N.B. we're also flagging the function call in the comprehension
102 | def list_comprehension_also_not_okay(default=[i**2 for i in range(3)]):
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^
103 |     pass
    |
help: Replace with `None`; initialize within function
    |
101 | # N.B. we're also flagging the function call in the comprehension
    - def list_comprehension_also_not_okay(default=[i**2 for i in range(3)]):
102 + def list_comprehension_also_not_okay(default=None):
103 |     pass
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:106:46
    |
106 | def dict_comprehension_also_not_okay(default={i: i**2 for i in range(3)}):
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
107 |     pass
    |
help: Replace with `None`; initialize within function
    |
105 |
    - def dict_comprehension_also_not_okay(default={i: i**2 for i in range(3)}):
106 + def dict_comprehension_also_not_okay(default=None):
107 |     pass
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:110:45
    |
110 | def set_comprehension_also_not_okay(default={i**2 for i in range(3)}):
    |                                             ^^^^^^^^^^^^^^^^^^^^^^^^
111 |     pass
    |
help: Replace with `None`; initialize within function
    |
109 |
    - def set_comprehension_also_not_okay(default={i**2 for i in range(3)}):
110 + def set_comprehension_also_not_okay(default=None):
111 |     pass
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:114:33
    |
114 | def kwonlyargs_mutable(*, value=[]):
    |                                 ^^
115 |     ...
    |
help: Replace with `None`; initialize within function
    |
113 |
    - def kwonlyargs_mutable(*, value=[]):
114 + def kwonlyargs_mutable(*, value=None):
115 |     ...
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:246:20
    |
244 | # B006 and B008
245 | # We should handle arbitrary nesting of these B008.
246 | def nested_combo(a=[float(3), dt.datetime.now()]):
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
247 |     pass
    |
help: Replace with `None`; initialize within function
    |
245 | # We should handle arbitrary nesting of these B008.
    - def nested_combo(a=[float(3), dt.datetime.now()]):
246 + def nested_combo(a=None):
247 |     pass
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:283:27
    |
282 | def mutable_annotations(
283 |     a: list[int] | None = [],
    |                           ^^
284 |     b: Optional[Dict[int, int]] = {},
285 |     c: Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
    |
help: Replace with `None`; initialize within function
    |
282 | def mutable_annotations(
    -     a: list[int] | None = [],
283 +     a: list[int] | None = None,
284 |     b: Optional[Dict[int, int]] = {},
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:284:35
    |
282 | def mutable_annotations(
283 |     a: list[int] | None = [],
284 |     b: Optional[Dict[int, int]] = {},
    |                                   ^^
285 |     c: Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
286 |     d: typing_extensions.Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
    |
help: Replace with `None`; initialize within function
    |
283 |     a: list[int] | None = [],
    -     b: Optional[Dict[int, int]] = {},
284 +     b: Optional[Dict[int, int]] = None,
285 |     c: Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:285:62
    |
283 |     a: list[int] | None = [],
284 |     b: Optional[Dict[int, int]] = {},
285 |     c: Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
    |                                                              ^^^^^
286 |     d: typing_extensions.Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
287 | ):
    |
help: Replace with `None`; initialize within function
    |
284 |     b: Optional[Dict[int, int]] = {},
    -     c: Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
285 +     c: Annotated[Union[Set[str], abc.Sized], "annotation"] = None,
286 |     d: typing_extensions.Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:286:80
    |
284 |     b: Optional[Dict[int, int]] = {},
285 |     c: Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
286 |     d: typing_extensions.Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
    |                                                                                ^^^^^
287 | ):
288 |     pass
    |
help: Replace with `None`; initialize within function
    |
285 |     c: Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
    -     d: typing_extensions.Annotated[Union[Set[str], abc.Sized], "annotation"] = set(),
286 +     d: typing_extensions.Annotated[Union[Set[str], abc.Sized], "annotation"] = None,
287 | ):
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:291:52
    |
291 | def single_line_func_wrong(value: dict[str, str] = {}):
    |                                                    ^^
292 |     """Docstring"""
    |
help: Replace with `None`; initialize within function
    |
290 |
    - def single_line_func_wrong(value: dict[str, str] = {}):
291 + def single_line_func_wrong(value: dict[str, str] = None):
292 |     """Docstring"""
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:295:52
    |
295 | def single_line_func_wrong(value: dict[str, str] = {}):
    |                                                    ^^
296 |     """Docstring"""
297 |     ...
    |
help: Replace with `None`; initialize within function
    |
294 |
    - def single_line_func_wrong(value: dict[str, str] = {}):
295 + def single_line_func_wrong(value: dict[str, str] = None):
296 |     """Docstring"""
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:300:52
    |
300 | def single_line_func_wrong(value: dict[str, str] = {}):
    |                                                    ^^
301 |     """Docstring"""; ...
    |
help: Replace with `None`; initialize within function
    |
299 |
    - def single_line_func_wrong(value: dict[str, str] = {}):
300 + def single_line_func_wrong(value: dict[str, str] = None):
301 |     """Docstring"""; ...
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:304:52
    |
304 | def single_line_func_wrong(value: dict[str, str] = {}):
    |                                                    ^^
305 |     """Docstring"""; \
306 |         ...
    |
help: Replace with `None`; initialize within function
    |
303 |
    - def single_line_func_wrong(value: dict[str, str] = {}):
304 + def single_line_func_wrong(value: dict[str, str] = None):
305 |     """Docstring"""; \
    |
note: This is an unsafe fix and may change runtime behavior

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:309:52
    |
309 |   def single_line_func_wrong(value: dict[str, str] = {
    |  ____________________________________________________^
310 | |     # This is a comment
311 | | }):
    | |_^
312 |       """Docstring"""
    |
help: Replace with `None`; initialize within function
    |
308 |
    - def single_line_func_wrong(value: dict[str, str] = {
    -     # This is a comment
    - }):
309 + def single_line_func_wrong(value: dict[str, str] = None):
310 |     """Docstring"""
    |
note: This is an unsafe fix and may change runtime behavior

B006 Do not use mutable data structures for argument defaults
   --> B006_B008.py:315:52
    |
315 | def single_line_func_wrong(value: dict[str, str] = {}) \
    |                                                    ^^
316 |     : \
317 |     """Docstring"""
    |
help: Replace with `None`; initialize within function

B006 [*] Do not use mutable data structures for argument defaults
   --> B006_B008.py:320:52
    |
320 | def single_line_func_wrong(value: dict[str, str] = {}):
    |                                                    ^^
321 |     """Docstring without newline"""
    |
help: Replace with `None`; initialize within function
    |
319 |
    - def single_line_func_wrong(value: dict[str, str] = {}):
320 + def single_line_func_wrong(value: dict[str, str] = None):
321 |     """Docstring without newline"""
    |
note: This is an unsafe fix and may change runtime behavior
